--- a/app/_locales/zh_CN/messages.json
+++ b/app/_locales/zh_CN/messages.json
@@ -251,23 +251,14 @@
   "connectingTo": {
     "message": "正在连接 $1"
   },
-  "connectingToKovan": {
-    "message": "正在连接到Kovan测试网络"
-  },
   "connectingToMainnet": {
-    "message": "正在连接到Conflux测试网"
+    "message": "正在连接到 Conflux Oceanus"
   },
-  "connectingToRopsten": {
-    "message": "正在连接到Ropsten测试网络"
-  },
-  "connectingToRinkeby": {
-    "message": "正在连接到Rinkeby测试网络"
+  "connectingToTestnet": {
+    "message": "正在连接到 Conflux Testnet"
   },
   "connectingToLocalhost": {
     "message": "正在连接 Localhost 12539"
-  },
-  "connectingToGoerli": {
-    "message": "正在连接 Goerli 测试网络"
   },
   "continueToWyre": {
     "message": "继续前往 Wyre"
