fix: default network is not testnet anymore (#230)

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -391,7 +391,7 @@
     "message": "Decimals of Precision"
   },
   "defaultNetwork": {
-    "message": "The default network for CFX transactions is Test Net."
+    "message": "The default network is Conflux Oceanus."
   },
   "delete": {
     "message": "Delete"
