--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -214,7 +214,7 @@
     "message": "Your Browser is not supported..."
   },
   "builtInCalifornia": {
-    "message": "ConfluxPortal a fork of Metamask which is designed and built in California. It's alterd to use on Conflux network in Beijing."
+    "message": "ConfluxPortal a fork of Metamask which is designed and built in California. It's altered to use on Conflux network in Beijing."
   },
   "buyWithWyre": {
     "message": "We don't support Wyre"
