--- a/app/_locales/zh_CN/messages.json
+++ b/app/_locales/zh_CN/messages.json
@@ -1166,6 +1166,9 @@
   "speedUpTransaction": {
     "message": "加速该交易操作"
   },
+  "sponsoredFee": {
+    "message": "代付费用"
+  },
   "switchNetworks": {
     "message": "切换网络"
   },
