--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1963,6 +1963,12 @@
   "viewAccount": {
     "message": "View Account"
   },
+  "viewContact": {
+    "message": "View Contact"
+  },
+  "viewOnCustomBlockExplorer": {
+    "message": "View at $1"
+  },
   "viewOnEtherscan": {
     "message": "View on Etherscan"
   },
@@ -2008,5 +2014,8 @@
   },
   "yourSigRequested": {
     "message": "Your signature is being requested"
+  },
+  "zeroGasPriceOnSpeedUpError": {
+    "message": "Zero gas price on speed up"
   }
 }
