feat: add simple gas feature back

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -2,15 +2,6 @@
   "cfxTestWarning": {
     "message": "Currently, the CFX are test tokens, and the amount in your wallet will be nulled when the test-net resets or upgrades"
   },
-  "migrateSai": {
-    "message": "A message from Maker: The new Multi-Collateral Dai token has been released. Your old tokens are now called Sai. Please upgrade your Sai tokens to the new Dai."
-  },
-  "migrateSaiInfo": {
-    "message": "To dismiss this notification you can migrate your tokens or hide SAI from the token list."
-  },
-  "migrate": {
-    "message": "Migrate"
-  },
   "showIncomingTransactions": {
     "message": "Show Incoming Transactions"
   },
@@ -1698,13 +1689,10 @@
   "restrictedMethods_eth_accounts": {
     "message": "Read the address of the selected account"
   },
-  "alreadySponsoredByContract": {
-    "message": "Smart contract sponsored"
-  },
   "optional": {
     "message": "Optional"
   },
-  "amountPlusGasFee": {
-    "message": "Amount + Gas Fee"
+  "amountPlusGasFeePlusStorageFee": {
+    "message": "Amount + (Gas Fee + Storage Fee)"
   }
 }
