--- a/app/_locales/zh_CN/messages.json
+++ b/app/_locales/zh_CN/messages.json
@@ -224,8 +224,14 @@
   "chromeRequiredForHardwareWallets": {
     "message": "您需要通过 Google Chrome 浏览器使用 ConfluxPortal ，连接个人硬件钱包。(硬件钱包没有经过充分测试, 使用中可能会遇到问题)"
   },
-  "confluxAddressWarning": {
+  "confluxAddressWarningClip": {
     "message": "请勿转账任何非 Conflux 网络资产至该地址，否则资产可能丢失。"
+  },
+  "confluxAddressWarningModal": {
+    "message": "请勿转账任何非 Conflux 网络资产至该地址，否则资产可能丢失。"
+  },
+  "confluxAddressWarningSend": {
+    "message": "请不要向非 Conflux 网络地址转账，否则资产可能丢失。"
   },
   "confirm": {
     "message": "确认"
