feat: add send to smart contract warning

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -32,6 +32,9 @@
   "confluxAddressWarningSend": {
     "message": "DO NOT transfer to non-ConfluxNetwork address to avoid assets lost."
   },
+  "confluxContractAddressWarningSend": {
+    "message": "ConfluxNetwork smart contract address, NOT user address"
+  },
   "connectedSites": {
     "message": "Connected Sites"
   },
