--- a/app/_locales/zh_CN/messages.json
+++ b/app/_locales/zh_CN/messages.json
@@ -233,6 +233,9 @@
   "confluxAddressWarningSend": {
     "message": "请不要向非 Conflux 网络地址转账，否则资产可能丢失。"
   },
+  "confluxContractAddressWarningSend": {
+    "message": "该地址为 Conflux 网络合约地址，非个人用户"
+  },
   "confirm": {
     "message": "确认"
   },
