--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -133,7 +133,7 @@
     "message": "Amount:"
   },
   "appDescription": {
-    "message": "An Conflux Wallet in your Browser",
+    "message": "A Conflux Wallet in your Browser",
     "description": "The description of the application"
   },
   "appName": {
