--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -114,6 +114,10 @@
   "amount": {
     "message": "Amount"
   },
+  "amountInEth": {
+    "message": "$1 ETH",
+    "description": "Displays an eth amount to the user. $1 is a decimal number"
+  },
   "amountWithColon": {
     "message": "Amount:"
   },
