Add full screen styles for intro popup and update svg (#57)
* Add full screen styles for intro popup and update svg

* Visual and copy tweaks to intro-popup component

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1605,7 +1605,7 @@
     "message": "Liquidity sources include:"
   },
   "swapIntroPopupSubTitle": {
-    "message": "MetaMask now aggregates multiple decentralized exchange aggregators and professional market makers to ensure you always get the best swap price with with the lowest network fees."
+    "message": "Get the best prices on token swaps right inside your wallet. MetaMask now connects you to multiple decentralized exchange aggregators and professional market makers."
   },
   "swapIntroPopupTitle": {
     "message": "Swap tokens in MetaMask! 🎉"
