--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1653,6 +1653,9 @@
   "yourPrivateSeedPhrase": {
     "message": "Your private seed phrase"
   },
+  "zeroAddressTxCount": {
+    "message": "This address DOES NOT have any historical transactions, please double check"
+  },
   "zeroGasPriceOnSpeedUpError": {
     "message": "Zero gas price on speed up"
   },
