Add missing spendLimitInsufficient locale message (#106)
* Add missing spendLimitInsufficient locale message

Co-authored-by: Erik Marks <rekmarks@protonmail.com>

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1485,6 +1485,9 @@
   "speedUpTransaction": {
     "message": "Speed up this transaction"
   },
+  "spendLimitInsufficient": {
+    "message": "Spend limit insufficient"
+  },
   "spendLimitInvalid": {
     "message": "Spend limit invalid; must be a positive number"
   },
