--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1462,6 +1462,9 @@
   "speedUpTransaction": {
     "message": "Speed up this transaction"
   },
+  "spendLimitInsufficient": {
+    "message": "Spend limit insufficient"
+  },
   "spendLimitInvalid": {
     "message": "Spend limit invalid; must be a positive number"
   },
